# finflow-sankey

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  finflow_sankey_reference_layout_improvement_plan.md  finflow_sankey_reference_layout_improvement_plan_reviewed.md  index.html  mkdocs.yml  project_evaluation_and_remaining_tasks.md  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  publish.yml
.omo/evidence/: current-goal-handoff.md
api/: index.html
changelog/: index.html
docs/: api.md  mapping.md  quickstart.md  validation.md
examples/: dart_fss_integration.py  dartlab_integration.py  from_csv.py  income_statement_quickstart.ipynb
examples/data/: sample_income_statement.csv
finflow-sankey/: CHANGELOG.md  CONTRIBUTING.md  FinFlow_Sankey_PRD_Evaluation_and_Improvement.md  README.md  finflow_sankey_stabilization_plan.md  pyproject.toml
finflow-sankey/docs/: adapters.md  api.md  faq.md  index.md  themes.md
finflow-sankey/examples/: from_excel.py
finflow-sankey/finflow_sankey/: __init__.py
finflow-sankey/tests/: test_basic.py  test_cash_flow.py  test_dark_theme.py  test_group_minor.py  test_income_reference_layout.py  test_mapping.py  test_multi_period.py
finflow_sankey/: __init__.py
finflow_sankey/adapters/: csv.py  dart_fss.py  dartlab.py  excel.py  pandas_adapter.py
finflow_sankey/core/: __init__.py  exceptions.py  graph.py  mapper.py  normalizer.py  (+4 more)
notebooks/: 01_income_statement.ipynb  02_reference_layout.ipynb
quickstart/: index.html
search/: search_index.json
steady-n-wise/: .env.example  .gitignore  DESIGN.md  Makefile  README.md  docker-compose.yml
steady-n-wise/data-service/: Dockerfile  README.md  pyproject.toml
steady-n-wise/data-service/src/steady_n_wise_data/: app.py  models.py  stocks.py
steady-n-wise/data-service/src/steady_n_wise_data/indicators/: supply_oscillator.py
steady-n-wise/data-service/tests/: test_app.py  test_supply_oscillator.py
tests/: test_adapters.py  test_balance_sheet.py  test_edge_cases.py  test_export.py  test_hover.py  test_layout.py  test_pandas.py
themes/: index.html
validation/: index.html
(+71 files in other folders)
