[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finflow-sankey"
version = "0.1.12"
description = "Polars-first financial statement Sankey visualization library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "FinFlow Team"}
]
keywords = ["sankey", "finance", "visualization", "polars", "plotly"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "polars>=0.20.0",
    "plotly>=5.18.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0"]

[project.urls]
Homepage = "https://github.com/finflow/finflow-sankey"
Repository = "https://github.com/finflow/finflow-sankey"

[tool.setuptools.packages.find]
where = ["."]
include = ["finflow_sankey*"]

[tool.setuptools.package-data]
finflow_sankey = ["py.typed", "palettes/*.yaml", "mappings/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py39"
