[project]
name = "steady-n-wise-data"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "httpx>=0.27",
    "polars>=1.0",
    "pydantic>=2.7",
    "redis>=5.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.20",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
